<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General Settings">
        <EditTextPreference
            android:key="deviceId"
            android:title="DEVICE ID"
            android:defaultValue="@string/settings_devId_default_value" />
        <EditTextPreference
            android:key="serverUrl"
            android:title="SERVER URL"
            android:defaultValue="@string/settings_url_default_value" />

        <ListPreference
            android:defaultValue="@string/settings_gps_accuracy_default_value"
            android:entries="@array/settings_accuracy_names"
            android:entryValues="@array/settings_accuracy_values"
            android:key="accuracy"
            android:summary="@string/settings_accuracy_summary"
            android:title="@string/settings_accuracy_title" />

        <EditTextPreference
            android:defaultValue="5"
            android:key="interval"
            android:inputType="number"
            android:summary="@string/settings_interval_summary"
            android:title="@string/settings_interval_title" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="distance"
            android:inputType="number"
            android:summary="@string/settings_distance_summary"
            android:title="@string/settings_distance_title" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="angle"
            android:inputType="number"
            android:summary="@string/settings_angle_summary"
            android:title="@string/settings_angle_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="buffer"
            android:summaryOff="off"
            android:summaryOn="on"
            android:title="BUFFER" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wakelock"
            android:summaryOff="@string/settings_wakelock_off_summary"
            android:summaryOn="@string/settings_wakelock_on_summary"
            android:title="@string/settings_wakelock" />
    </PreferenceCategory>

</PreferenceScreen>